[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "ikctl"
dynamic = ["version"]
description = "CLI tool for deploying software to remote and local servers via SSH/SFTP."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE*"]
authors = [
    { name = "David Moya Lopez", email = "3nueves@gmail.com" }
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: System Administrators",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "paramiko>=3.0,<4.0",
    "pyaml",
    "envyaml",
    "rich>=13.0",
]

[project.scripts]
ikctl = "ikctl.main:main"

[project.urls]
Repository = "https://github.com/3nueves/ikctl"

[tool.hatch.version]
path = "ikctl/config/config.py"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
tmp_path_retention_policy = "all"
tmp_path_retention_count = 10
basetemp = "/Users/davidmoyalopez/tmp/pytest"

[tool.ruff]
line-length = 100
